tests/ui/resolve/bad_type_path.stderr
error: identifier `S2` already declared
  --> $DIR/bad_type_path.sol:7:8
   |
LL | struct S2 {
   |        -- note: previous declaration declared here
LL |     uint x;
LL | }
LL | struct S2 {
   |        ^^
   |

error: `S` is a struct, which cannot be indexed in type paths
  --> $DIR/bad_type_path.sol:19:5
   |
LL |     S.x s2;
   |     ^
   |

error: `S2` is a struct, which cannot be indexed in type paths
  --> $DIR/bad_type_path.sol:22:5
   |
LL |     S2.x s4;
   |     ^^
   |

error: symbol `f` resolved to multiple declarations
  --> $DIR/bad_type_path.sol:24:5
   |
LL |     f f1;
   |     ^
   |

error: symbol `f` resolved to multiple declarations
  --> $DIR/bad_type_path.sol:25:5
   |
LL |     f.x f2;
   |     ^
   |

error: aborting due to 5 previous errors

